added some comments.

--- a/bicycle.html
+++ b/bicycle.html
@@ -189,6 +189,10 @@
                 /*
                     Implement keyboard controls for steering (i.e. turning the handlebars)
                 */
+                /*
+					I'm having a probelm making the front not rotate around the origin. I'll fix it later if I have time. 
+                */
+
 				//sfork.rotation.y+=.1;
 				//wheel2.rotation.y+=.1;
 				//bicycle.translateX(1);
